# ML4DQMDC-PixelAE

./: flake.nix  ml4dqmdc-pixelae-package.nix  pyproject.toml  requirements.txt
dqmio/src/: DQMIOReader.py
src/: DataLoader.py  _import_adapter.py
src/classifiers/: MomentClassifier.py
src/ml4dqmdc/: __init__.py  _data_loader.py  _hist_struct.py  _model.py  _model_interface.py
src/ml4dqmdc/classifiers/: __init__.py  _auto_encoder.py  _histogram_classifier.py  _landau_classifier.py  _max_pull_classifier.py  _moment_classifier.py  _nmf_classifier.py  _pca_classifier.py  _template_based_classifier.py
src/ml4dqmdc/cloudfitters/: __init__.py  _cloud_fitter.py  _exponential_fitter.py  _gaussian_kde_fitter.py  _hyper_rectangle_fitter.py  _identity_fitter.py  _log_normal_fitter.py  _pca_gaussian_fitter.py  _pca_gaussian_kde_fitter.py  _seminormal_fitter.py
src/ml4dqmdc/utils/: autoencoder_utils.py  clustering_utils.py  csv_utils.py  dataframe_utils.py  generate_data_2d_utils.py  generate_data_utils.py  hist_utils.py  plot_utils.py  refruns_utils.py
utils/: autoencoder_utils.py  csv_utils.py  notebook_utils  plot_utils.py
